--- a/JadoTravel/Views/Shared/Components/_UILayoutNavbarComponent/Default.cshtml
+++ b/JadoTravel/Views/Shared/Components/_UILayoutNavbarComponent/Default.cshtml
@@ -6,7 +6,7 @@
         <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base align-items-lg-center align-items-start">
                 <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="/Service/Index/">Hizmetler</a></li>
-                <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="#destination">Turlar</a></li>
+                <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="/Default/AllDestination/">Turlar</a></li>
                 <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="#booking">Rezervasyon</a></li>
                 <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="#testimonial">Referans</a></li>
             </ul>
