--- a/JadoTravel/Views/_ViewImports.cshtml
+++ b/JadoTravel/Views/_ViewImports.cshtml
@@ -1,7 +1,12 @@
 ﻿@using JadoTravel
 @using JadoTravel.Models
 @using JadoTravel.Features.CQRS.Results.DestinationResults
+@using JadoTravel.Features.CQRS.Results.FeatureResults
+@using JadoTravel.Features.CQRS.Results.StepResults
 @using JadoTravel.Features.CQRS.Commands.DestinationCommands
 @using JadoTravel.Features.Mediator.Commands.ServiceCommands
 @using JadoTravel.Features.Mediator.Results.ServiceResults
+@using JadoTravel.Features.Mediator.Results.TestimonialResults
+@using JadoTravel.Features.Mediator.Results.CompanyResults
+@using JadoTravel.Features.Mediator.Commands.SubscribeCommands
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
