--- a/JadoTravel/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
+++ b/JadoTravel/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
@@ -5,19 +5,19 @@
 			<div class="nav">
 				<div class="sb-sidenav-menu-heading">Core</div>
 				<a class="nav-link" href="tables.html">
-					<div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
+					<div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
 					Turlar
 				</a>
 				<a class="nav-link" href="tables.html">
 					<div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
 					Hizmetler
 				</a>
-				<a class="nav-link" href="index.html">
+				<a class="nav-link" href="/AdminFeature/Index/">
 					<div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
 					Hakkımızda
 				</a>
-				<a class="nav-link" href="charts.html">
-					<div class="sb-nav-link-icon"><i class="fas fa-angle-down"></i></div>
+				<a class="nav-link" href="/AdminTestimonial/Index/">
+					<div class="sb-nav-link-icon"><i class="fa-regular fa-user"></i></div>
 					Referanslar
 				</a>
 				<a class="nav-link" href="tables.html">
@@ -29,7 +29,7 @@
 					Firmalar
 				</a>
 				<a class="nav-link" href="tables.html">
-					<div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+					<div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
 					Adımlar
 				</a>
 			</div>
