--- a/JadoTravel/Views/_ViewImports.cshtml
+++ b/JadoTravel/Views/_ViewImports.cshtml
@@ -9,4 +9,5 @@
 @using JadoTravel.Features.Mediator.Results.TestimonialResults
 @using JadoTravel.Features.Mediator.Results.CompanyResults
 @using JadoTravel.Features.Mediator.Commands.SubscribeCommands
+@using JadoTravel.Features.Mediator.Commands.TestimonialCommands
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
