--- a/JadoTravel/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
+++ b/JadoTravel/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
@@ -4,11 +4,11 @@
 		<div class="sb-sidenav-menu">
 			<div class="nav">
 				<div class="sb-sidenav-menu-heading">Core</div>
-				<a class="nav-link" href="tables.html">
+				<a class="nav-link" href="/Destination/Index/">
 					<div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
 					Turlar
 				</a>
-				<a class="nav-link" href="tables.html">
+				<a class="nav-link" href="/Service/Index/">
 					<div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
 					Hizmetler
 				</a>
@@ -20,11 +20,11 @@
 					<div class="sb-nav-link-icon"><i class="fa-regular fa-user"></i></div>
 					Referanslar
 				</a>
-				<a class="nav-link" href="tables.html">
+				<a class="nav-link" href="/AdminSubscribe/Index/">
 					<div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
 					Aboneler
 				</a>
-				<a class="nav-link" href="tables.html">
+				<a class="nav-link" href="/AdminCompany/Index/">
 					<div class="sb-nav-link-icon"><i class="fa-solid fa-barcode"></i></div>
 					Firmalar
 				</a>
