--- a/JadoTravel/Views/_ViewImports.cshtml
+++ b/JadoTravel/Views/_ViewImports.cshtml
@@ -8,6 +8,8 @@
 @using JadoTravel.Features.Mediator.Results.ServiceResults
 @using JadoTravel.Features.Mediator.Results.TestimonialResults
 @using JadoTravel.Features.Mediator.Results.CompanyResults
+@using JadoTravel.Features.Mediator.Results.SubscribeResults
 @using JadoTravel.Features.Mediator.Commands.SubscribeCommands
 @using JadoTravel.Features.Mediator.Commands.TestimonialCommands
+@using JadoTravel.Features.Mediator.Commands.CompanyCommands
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
