--- a/JadoTravel/Views/Destination/CreateDestination.cshtml
+++ b/JadoTravel/Views/Destination/CreateDestination.cshtml
@@ -1,11 +1,13 @@
 ﻿@model CreateDestinationCommand
 @{
     ViewData["Title"] = "CreateDestination";
+    Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<div class="container">
-    <h3>Tur Rotası Ekleme Sayfası</h3>
-
+<div class="container-fluid px-4">
+    <br />
+    <h2>Yeni Tur Ekleme Sayfası</h2>
+    <br />
     <form method="post">
 
         <label>Şehir</label>
