--- a/JadoTravel/Views/Destination/Index.cshtml
+++ b/JadoTravel/Views/Destination/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model List<GetDestinationQueryResult>
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<div class="container">
-	<h3>Tur Rotaları</h3>
+<div class="container-fluid px-4">
+    <br />
 
 	<table class="table table-bordered">
         @{
