--- a/JadoTravel/Views/Service/Index.cshtml
+++ b/JadoTravel/Views/Service/Index.cshtml
@@ -1,10 +1,11 @@
 ﻿@model List<GetServiceQueryResult>
 @{
     ViewData["Title"] = "Index";
+    Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<div class="container">
-    <h3>Hizmetlerimiz</h3>
+<div class="container-fluid px-4">
+    <br />
 
     <table class="table table-bordered">
         @{
