--- a/JadoTravel/Views/_ViewImports.cshtml
+++ b/JadoTravel/Views/_ViewImports.cshtml
@@ -4,6 +4,7 @@
 @using JadoTravel.Features.CQRS.Results.FeatureResults
 @using JadoTravel.Features.CQRS.Results.StepResults
 @using JadoTravel.Features.CQRS.Commands.DestinationCommands
+@using JadoTravel.Features.CQRS.Commands.FeatureCommands
 @using JadoTravel.Features.Mediator.Commands.ServiceCommands
 @using JadoTravel.Features.Mediator.Results.ServiceResults
 @using JadoTravel.Features.Mediator.Results.TestimonialResults
