--- a/JadoTravel/Views/AdminFeature/UpdateFeature.cshtml
+++ b/JadoTravel/Views/AdminFeature/UpdateFeature.cshtml
@@ -1,14 +1,15 @@
-﻿@model GetFeatureByIdQueryResult
+﻿@model UpdateFeatureCommand
 @{
     ViewData["Title"] = "UpdateFeature";
     Layout = "~/Views/AdminLayout/Index.cshtml";
 }
+
 <div class="container-fluid px-4">
     <br />
+	<h2>Güncelleme Sayfası</h2>
+	<br />
 <form method="post">
     <input type="hidden" asp-for="FeatureId" />
-    <h2>Güncelleme Sayfası</h2>
-    <br />
     <label>Başlık</label>
     <input type="text" asp-for="Title" class="form-control" />
     <br />
