--- a/JadoTravel/Views/Service/CreateService.cshtml
+++ b/JadoTravel/Views/Service/CreateService.cshtml
@@ -1,10 +1,13 @@
 ﻿@model CreateServiceCommand
 @{
     ViewData["Title"] = "CreateService";
+    Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h3>Yeni Hizmet Oluşturma Sayfası</h3>
-
+<div class="container-fluid px-4">
+    <br />
+    <h2>Yeni Hizmet Ekleme Sayfası</h2>
+    <br />
 <form method="post">
 
     <label>Başlık</label>
@@ -20,3 +23,4 @@
 
 </form>
 
+</div>
