--- a/JadoTravel/Views/Service/UpdateService.cshtml
+++ b/JadoTravel/Views/Service/UpdateService.cshtml
@@ -1,10 +1,13 @@
 ﻿@model UpdateServiceCommand
 @{
     ViewData["Title"] = "UpdateService";
+    Layout = "~/Views/AdminLayout/Index.cshtml";
 }
 
-<h3>Hizmet Güncelleme Sayfası</h3>
-
+<div class="container-fluid px-4">
+    <br />
+    <h2>Hizmet Güncelleme Sayfası</h2>
+    <br />
 <form method="post">
     <input type="hidden" asp-for="ServiceId" />
     <label>Başlık</label>
@@ -19,4 +22,4 @@
     <button class="btn btn-primary">Güncelle</button>
 
 </form>
-
+</div>
