--- a/JadoTravel/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
+++ b/JadoTravel/Views/Shared/Components/_AdminLayoutSidebarComponent/Default.cshtml
@@ -28,7 +28,7 @@
 					<div class="sb-nav-link-icon"><i class="fa-solid fa-barcode"></i></div>
 					Firmalar
 				</a>
-				<a class="nav-link" href="tables.html">
+				<a class="nav-link" href="/AdminStep/Index/">
 					<div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
 					Adımlar
 				</a>
