--- a/JadoTravel/Views/_ViewImports.cshtml
+++ b/JadoTravel/Views/_ViewImports.cshtml
@@ -5,6 +5,7 @@
 @using JadoTravel.Features.CQRS.Results.StepResults
 @using JadoTravel.Features.CQRS.Commands.DestinationCommands
 @using JadoTravel.Features.CQRS.Commands.FeatureCommands
+@using JadoTravel.Features.CQRS.Commands.StepCommands
 @using JadoTravel.Features.Mediator.Commands.ServiceCommands
 @using JadoTravel.Features.Mediator.Results.ServiceResults
 @using JadoTravel.Features.Mediator.Results.TestimonialResults
