--- a/JadoTravel/Views/Default/AllDestination.cshtml
+++ b/JadoTravel/Views/Default/AllDestination.cshtml
@@ -23,7 +23,7 @@
 			{
 				<div class="col-md-4 mb-4">
 					<div class="card overflow-hidden shadow">
-						<img class="card-img-top" src="@item.Image" alt="Rome, Italty" />
+						<img class="card-img-top" src="@item.Image" style="width:100%; height:300px" alt="Rome, Italty" />
 						<div class="card-body py-4 px-3">
 							<div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
 								<h4 class="text-secondary fw-medium"><a class="link-900 text-decoration-none stretched-link" href="#!">@item.City</a></h4><span class="fs-1 fw-medium">@item.Price ₺</span>
@@ -33,6 +33,7 @@
 					</div>
 				</div>
 			}
+
 		</div>
 	</div><!-- end of .container-->
 
