--- a/JadoTravel/Views/Shared/Components/_DefaultDestinationComponent/Default.cshtml
+++ b/JadoTravel/Views/Shared/Components/_DefaultDestinationComponent/Default.cshtml
@@ -1,24 +1,35 @@
-﻿@model List<GetDestinationQueryResult>
+﻿@model List<GetDestinationHomeQueryResult>
 
 <section class="pt-5" id="destination">
 
 	<div class="container">
 		<div class="position-absolute start-100 bottom-0 translate-middle-x d-none d-xl-block ms-xl-n4"><img src="~/jadoo/public/assets/img/dest/shape.svg" alt="destination" /></div>
 		<div class="mb-7 text-center">
-			<h5 class="text-secondary">Çok Satanlar</h5>
-			<h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">En Çok Tercih Edilenler</h3>
+			<h5 class="text-secondary">Son Eklenenler</h5>
+			<h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">Son Eklenen Rotalar</h3>
 		</div>
+
 		<div class="row">
+
 			@foreach (var item in Model)
 			{
 				<div class="col-md-4 mb-4">
 					<div class="card overflow-hidden shadow">
-						<img class="card-img-top" src="@item.Image" alt="Rome, Italty" />
+						<img class="card-img-top" src="@item.Image" alt="@item.City" />
 						<div class="card-body py-4 px-3">
 							<div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
-								<h4 class="text-secondary fw-medium"><a class="link-900 text-decoration-none stretched-link" href="#!">@item.City</a></h4><span class="fs-1 fw-medium">@item.Price ₺</span>
+								<h4 class="text-secondary fw-medium">
+									<a class="link-900 text-decoration-none stretched-link" href="#!">
+										@item.City
+										</a>
+									</h4>
+									<span class="fs-1 fw-medium">@item.Price ₺</span>
 							</div>
-							<div class="d-flex align-items-center"> <img src="~/jadoo/public/assets/img/dest/navigation.svg" style="margin-right: 14px" width="20" alt="navigation" /><span class="fs-0 fw-medium">@item.Duration</span></div>
+							<div class="d-flex align-items-center">
+								<img src="~/jadoo/public/assets/img/dest/navigation.svg" style="margin-right: 14px" width="20" alt="navigation" />
+								<span class="fs-0 fw-medium">@item.Duration</span>
+							</div>
+
 						</div>
 					</div>
 				</div>
