--- a/JadoTravel/Views/Shared/Components/_UILayoutNavbarComponent/Default.cshtml
+++ b/JadoTravel/Views/Shared/Components/_UILayoutNavbarComponent/Default.cshtml
@@ -5,7 +5,7 @@
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"> </span></button>
         <div class="collapse navbar-collapse border-top border-lg-0 mt-4 mt-lg-0" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto pt-2 pt-lg-0 font-base align-items-lg-center align-items-start">
-                <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="/Service/Index/">Hizmetler</a></li>
+                <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="#service">Hizmetler</a></li>
                 <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="/Default/AllDestination/">Turlar</a></li>
                 <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="#booking">Rezervasyon</a></li>
                 <li class="nav-item px-3 px-xl-4"><a class="nav-link fw-medium" aria-current="page" href="#testimonial">Referans</a></li>
